# Modelfence-runtime-defense

./: Dockerfile  EXECUTION_STEPS.md  README.md  SECURITY.md  THREAT_MODEL.md  UPGRADE_REPORT.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
aegisrt/datasets/: registry.py
docs/: agentic-ai-security.md  mitre-atlas-mapping.md  nist-ai-rmf-crosswalk.md  owasp-2025-coverage.md  soc-siem-integration.md
examples/: local-callback-demo.py  local_http_target.py  owasp-2025-enterprise.yaml  owasp-2025-quick.yaml
tests/: test_datasets.py
